--- a/frontend_vue/package.json
+++ b/frontend_vue/package.json
@@ -12,6 +12,7 @@
     "boostrap": "^2.0.0",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "dotenv": "^16.4.4",
     "primeicons": "^6.0.1",
     "primevue": "^3.48.1",
     "vue": "^3.2.13",
